display downloaded files

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,10 @@
           <ul id="failed-list"></ul>
         </div>
       </div>
+      <div id="downloaded-section" class="status-section">
+        <h2>Downloaded Songs</h2>
+        <ul id="downloaded-list"></ul>
+      </div>
     </div>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
   </body>
